Fix channel overflow.

--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,7 @@ textarea {
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
   background: var(--dark0);
 }
 
